# spotifyMigrate

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
spotM/cli/: download.py  sync.py
spotM/core/: spotify.py  utils.py  youtube.py
