[project]
name = "spotifymigrate"
version = "0.1.0"
description = "cli tool to download your spotify playlists"
authors = [
    {name = "Duck_005"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "certifi (>=2025.11.12,<2026.0.0)",
    "charset-normalizer (>=3.4.4,<4.0.0)",
    "idna (>=3.11,<4.0)",
    "markdown-it-py (>=4.0.0,<5.0.0)",
    "mdurl (>=0.1.2,<0.2.0)",
    "pygments (>=2.19.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "spotipy (>=2.25.1,<3.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "yt-dlp (>=2025.11.12,<2026.0.0)",
    "ytmusicapi (>=1.11.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
